--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,14 @@ body {
 
 .wrapper {
     border-radius: 30px;
-    height: 40rem;
-    width: 35rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 35rem;
+    width: 30rem;
     background-color: rgba(255, 247, 247, 0.864);
     font-size: 2rem;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.739) inset;
-
 }
 
 .screen {
@@ -27,27 +29,65 @@ body {
     border-top-right-radius: 20px;
     background-color: #316C85;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
     box-shadow: 0px 0px 30px rgba(2, 2, 2, 0.664) inset;
+    height: 22%;   
 }
 
-.screen input {
-    height: 50%;
-    width: 80%;
-    margin: 5% 10%;
-    font-size: 3.5rem;
+#display{
+    width: 100%;
+    height: 30%;
+    font-size: 1rem;
+    margin: 0;
     text-align: end;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(233, 231, 231);
-    color: black;
+    margin-right: 5%;
 }
 
-.buttons {
+#displayTempResult{
+    width: 100%;
+    height: 30%;
+    font-size: 2rem;
+    margin: 0%;
+    text-align: end;
+}
+
+#displayResult{
+    width: 100%;
+    margin: 0% 3%;
+    text-align: middle;
+    font-size: 2rem;
+    font-weight: 900;
+}
+
+.innerScreen{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 90%;
+    border-radius: 20px;
+    height: 80%;
+    background-color: rgb(211, 209, 209);
+    border: 1px solid rgb(9, 9, 9);
+    box-shadow: 10px 10px 100px rgba(255, 255, 255, 0.789) inset;
+}
+
+.button{
     display: flex;
     flex-wrap: wrap;
-    vertical-align: middle;
+    width: 100%;
+    justify-content: center;
+    align-content: flex-start;
+    height: 70%;
+
+}
+
+.buttons{
+    width: 70%;
+    display: flex;
     justify-content: space-evenly;
-    height: 60%;
-    margin: 3% 0;
+    flex-wrap: wrap;
 }
 
 .operator{
@@ -60,6 +100,10 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-content: flex-start;
+}
+
+.half{
+    width: 220px;
 }
 
 .equal {
@@ -78,8 +122,8 @@ body {
 }
 
 button {
-    height: 50px;
-    width: 150px;
+    height: 100px;
+    width: 100px;
     margin: 2% 1%;
     font-size: 2rem;
     border-radius: 10px;
@@ -88,6 +132,7 @@ button {
     border: 0.4px solid  black;
 }
 .sideButtons {
+    display: flex;
     width: 100%;
     height: 15%;
 }
@@ -98,6 +143,11 @@ button {
 }
 
 .underButtons {
-    width: 100%;
-    height: 15%;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
+.underButtons button {
+    height: 130px;
 }
