--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
     width: 100%;
     height: 30%;
     font-size: 2rem;
-    margin: 0%;
+    margin: 0% 3%;
     text-align: end;
 }
 
@@ -80,7 +80,6 @@ body {
     justify-content: center;
     align-content: flex-start;
     height: 70%;
-
 }
 
 .buttons{
@@ -131,6 +130,18 @@ button {
     box-shadow: 0px 0px 1px #000000 inset;
     border: 0.4px solid  black;
 }
+
+.letter{
+    font-size: 1.5rem;
+}
+
+button:hover{
+box-shadow: 2px 4px 2px grey;
+text-shadow: 1px 1px 1px rgb(7, 7, 7);
+}
+
+
+
 .sideButtons {
     display: flex;
     width: 100%;
